# oxcaml

./:    .depend  .git-blame-ignore-revs  .gitattributes  .gitignore  .ocamlformat  AGENTS.md  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  Changes  HACKING.adoc  HACKING.md  HACKING.ox.adoc  JIT_GDB_PLAN.md  Makefile  Makefile.build_config.in  Makefile.common  Makefile.common-ox  Makefile.config.in  Makefile.menhir  Makefile.ox  Makefile.upstream  PERF_JIT_PLAN.md  PR_SPLIT_PLAN.md  README.adoc  README.md  RECUT-PLAN.md  REVIEW-CODEX.md  REVIEW-PLAN.md  REVIEW.md  SLICE2-HANDOFF.md  SLICE3-HANDOFF.md  STAGE4C-DESIGN.md  STAGE4D-DESIGN.md  STAGE5-FORMAT-NOTES.md  STAGE5A-NOTES.md  STAGE5C-NOTES.md  STAGE5D-MIGRATION.md  STAGE5D-NOTES.md  (+86 more)
bytecomp/: .ocamlformat  .ocamlformat-enable  blambda.ml  blambda_of_lambda.ml  blambda_of_lambda.mli  bytefunctorizer.ml  bytefunctorizer.mli  bytegen.ml  byteinstantiator.ml  byteinstantiator.mli  bytelibrarian.ml  bytelibrarian.mli  bytelink.ml  bytelink.mli  bytepackager.ml  bytepackager.mli  bytesections.ml  bytesections.mli  cmo_io.ml  cmo_io.mli  debug_event.mli  dll.ml  dll.mli  dune  emitcode.ml  emitcode.mli  instruct.ml  instruct.mli  meta.ml  meta.mli  opcodes.ml.c  printblambda.ml  printinstr.ml  printinstr.mli  symtable.ml  symtable.mli
chamelon/minios/: dune  minios.ml
duneconf/: dune
experiments/web_bytecode/: README.md  app-diagnostic-sort.js  app.js  backend.js  backend_direct.js  backend_worker.js  browser_switch_check.ml  browser_switch_common.ml  browser_switch_interface.ml  browser_switch_js.ml  browser_switch_run.ml  browser_switch_wasm.ml  build_browser_switch.sh  build_cmi_fs.sh  build_host_cmi_bundle.sh  deploy_pages.sh  dune  embed_demo.html  embed_styling.html  ensure_oxweb_switch.sh  generate_browser_package_manifest.ml  index-diagnostic-sort.html  index.html  oxcaml-embed-diagnostic-sort.js  oxcaml-embed-module-diagnostic-sort.js  oxcaml-embed-module.js  oxcaml-embed.js  playground_prelude.js  run_check_demo_node.sh  runtime_shims.js  sample_catalog.js  serve_playground.py  smoke_test.html  smoke_test_base.html  smoke_test_catalog.html  smoke_test_core.html  smoke_test_dump.html  smoke_test_samples.html  stage_minimal_5_4_install.sh  unsupported_samples.js  (+12 more)
experiments/web_bytecode/opam-overlay/: repo
experiments/web_bytecode/toolchain/: ocaml-wrapper
lattice-gen/test/: chains.lattice  cli.t  compiler_adjoints_html.lattice  compiler_structure.lattice  compiler_structure_html.lattice  compiler_structure_kind_subbed.lattice  compiler_structure_unique_implies_uncontended_html.lattice  diamond.lattice  dune  example.lattice  mode_compatibility_source.ml  observable.t  observable_input.html  sampled_product.lattice  test_bitwise.ml  test_codegen_shapes.ml  test_compiler_fixture.ml  test_curated_fixtures.ml  test_mode_compatibility.ml  test_model_structure.ml  test_negative_cases.ml  test_observable.ml  test_property_cases.ml  test_semantics.ml  test_support.ml
lattice-gen/test/observable-fixtures/: basic.html  compiler-adjoints.html  compiler-structure.html  index.html  (+7 more)
middle_end/jsoo_imports/: dune  jsoo_imports.ml
otherlibs/camlinternaleval/: camlinternaleval.ml  camlinternaleval.mli  dune  eval_stubs.c
otherlibs/dynlink/: .depend  .ocamlformat-ignore  Makefile  compression.ml  dune  dynlink.ml  dynlink.mli  dynlink_common.ml  dynlink_common.mli  dynlink_config.ml.in  dynlink_config.mli  dynlink_platform_intf.ml  dynlink_shims.ml  dynlink_types.ml  dynlink_types.mli  shim.sh
otherlibs/eval/: .ocamlformat  .ocamlformat-enable  META.in  dune  eval.ml  eval.mli  eval_stubs.c
otherlibs/eval_quotations/: META.in  dune  eval_quotations.ml  eval_quotations.mli
stdlib/: .depend  .ocamlformat  .ocamlformat-enable  Makefile  StdlibModules  arg.ml  array.ml  array.mli  arrayLabels.mli  atomic.ml  atomic.mli  backoff.ml  bigarray.ml  bigarray.mli  bool.ml  bool.mli  buffer.ml  buffer.mli  bytes.ml  bytes.mli  bytesLabels.mli  camlinternalComprehension.mli  camlinternalFormat.ml  camlinternalFormat.mli  camlinternalFormatBasics.ml  camlinternalFormatBasics.mli  camlinternalLazy.ml  camlinternalLazy.mli  camlinternalMod.ml  camlinternalOO.ml  camlinternalOO.mli  camlinternalQuote.ml  camlinternalQuote.mli  char.ml  char.mli  complex.ml  complex.mli  condition.ml  condition.mli  digest.ml  (+95 more)
stdlib/templates/: hashtbl.template.mli  map.template.mli
testsuite/lib/: dune  lib.ml  lib.mli  testing.ml  testing.mli
testsuite/tools/: add_ikinds.sh  cmdline.ml  cmdline.mli  codegen_main.ml  compression.ml  compression.mli  dune  environment.ml  environment.mli  expect.ml  expect.mli  harness.ml  harness.mli  lexcmm.mli  main_in_c.c  parsecmm.mly  testBytecodeBinaries.ml  testBytecodeBinaries.mli  testDynlink.ml  testDynlink.mli  testLinkModes.ml  testLinkModes.mli  testRelocation.ml  testRelocation.mli  testToplevel.ml  testToplevel.mli  test_in_prefix.ml  test_in_prefix.mli  test_ld_conf.ml  test_ld_conf.mli  toolchain.ml  toolchain.mli
tools/: .ocamlformat  Makefile  allprims.ml  analyze_cms_sizes.py  analyze_debug_stats.py  apply-diff.sh  check-symbol-names  clean-compiler-repo.sh  cmpbyt.ml  codegen-html.sed  debug_printers.ml  debug_printers_wrapper.ml  diff_compiler_versions.sh  dumpobj.ml  dune  eqparsetree.ml  fuel_bisect.py  gdb-macros  gen_compiler_libs_installation.ml  gen_ocamlj_rules.sh  gen_sizeclasses.ml  generate_cached_generic_functions.ml  lintapidiff.ml  listprims.ml  magic  merge_archives.ml  merge_dot_a_files.sh  objinfo.ml  ocamlcmt.ml  ocamlcp.ml  ocamlcp_common.ml  ocamlcp_common.mli  ocamlfilt.ml  ocamlmklib.ml  ocamlmktop.ml  ocamloptp.ml  ocamlprof.ml  ocamltex.ml  opnames.ml.c  primreq.ml  (+6 more)
tools/avx512gen/: README.md  coverage.py  generate.py  genmem.py  simdb.py
tools/cfg/: cfg_tool.ml  dune
tools/regalloc/: dune  regalloc.ml
tools/simdgen/: .ocamlformat-enable  amd64_simd_defs.ml  amd64_simd_instrs.ml  amd64_simd_intrins.ml  amd64_simd_intrins_skiplist.txt  dune  plan.md  simdgen.ml  simdgen_intrins.ml  simdgen_types.ml  simdgen_xml.ml
tools/unlabel-patches/: 1.mli  2.mli  3.mli  4.mli
(+8310 files in other folders)
