;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                     Thomas Refis, Jane Street Europe                   *
;*                                                                        *
;*   Copyright 2018 Jane Street Group LLC                                 *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (targets opcodes.ml)
 (mode fallback)
 (deps
  (:conf ../Makefile.config)
  (:c opcodes.ml.c)
  (:tbl
   ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set}/caml/opcodes.h))
 (action
  (with-stdout-to
   %{targets}
   (bash
    "`grep '^CPP=' %{conf} | cut -d'=' -f2-` -I ../%{env:RUNTIME_DIR=runtime-dir-env-var-not-set} %{c}"))))

(rule
 (targets opcodes.mli)
 (mode    fallback)
 (deps    (:instr (file opcodes.ml)))
 (action
  (bash "ocamlc -i %{instr} > %{targets}")))
