(test
 (name test_semantics)
 (libraries lattice_gen_lib unix)
 (deps
  example.lattice
  compiler_structure.lattice
 compiler_structure_kind_subbed.lattice
 chains.lattice
  diamond.lattice
  sampled_product.lattice
  observable_input.html
  observable-fixtures/basic.html
  observable-fixtures/cumulative.html
  observable-fixtures/filtered.html
  observable-fixtures/multi-lat.html))

(cram
 (deps
  example.lattice
  observable_input.html
  observable-fixtures/basic.html
  observable-fixtures/cumulative.html
  observable-fixtures/filtered.html
  observable-fixtures/multi-lat.html
  ../bin/lattice_gen.exe))
