(test
 (name test_semantics)
 (modules
 test_semantics
 test_support
  test_bitwise
  test_codegen_shapes
  test_negative_cases
  test_model_structure
  test_observable
  test_compiler_fixture
  test_curated_fixtures)
 (libraries lattice_gen_lib unix)
 (deps
  example.lattice
  chains.lattice
  diamond.lattice
  sampled_product.lattice
  compiler_structure_html.lattice
  observable_input.html
  observable-fixtures/index.html
  observable-fixtures/basic.html
  observable-fixtures/cumulative.html
  observable-fixtures/compiler-structure.html
  observable-fixtures/filtered.html
  observable-fixtures/multi-lat.html
  observable-fixtures/proposed-morph-syntax.html))
