;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*           Mark Shinwell and Thomas Refis, Jane Street Europe           *
;*                                                                        *
;*   Copyright 2018--2020 Jane Street Group LLC                           *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(rule
 (with-stdout-to
  dynlink_support.ml
  (progn
   (echo "# 1 \"dynlink_shims.ml\"\n")
   (cat dynlink_shims.ml)
   (echo "module Cmo_format = struct\n")
   (echo "# 1 \"../../file_formats/cmo_format.mli\"\n")
   (cat ../../file_formats/cmo_format.mli)
   (echo "end\n")
   (echo "module Cmxs_format = struct\n")
   (echo "# 1 \"../../file_formats/cmxs_format.mli\"\n")
   (cat ../../file_formats/cmxs_format.mli)
   (echo "end\n"))))

(copy_files# byte/*)

(library
 (name dynlink)
 (wrapped false)
 (modes byte native)
 (ocamlopt_flags :standard -ccopt %{read:../../natdynlinkops} -pp "%{project_root}/otherlibs/dynlink/%{dep:shim.sh} %{dep:native/dynlink.ml}")
 (modules :standard \ dynlink_cmo_format dynlink_cmxs_format))

(install
 (files
  (.dynlink.objs/byte/dynlink.cmti as dynlink/dynlink.cmti)
  (.dynlink.objs/byte/dynlink.cmt as dynlink/dynlink.cmt)
  (.dynlink.objs/native/dynlink_common.cmx
   as
   dynlink/dynlink_common.cmx)
  (.dynlink.objs/native/dynlink_platform_intf.cmx
   as
   dynlink/dynlink_platform_intf.cmx)
  (.dynlink.objs/native/dynlink_support.cmx
   as
   dynlink/dynlink_support.cmx)
  (.dynlink.objs/native/dynlink_config.cmx
   as
   dynlink/dynlink_config.cmx)
  (.dynlink.objs/native/dynlink_symtable.cmx
   as
   dynlink/dynlink_symtable.cmx)
  (.dynlink.objs/native/dynlink_types.cmx
   as
   dynlink/dynlink_types.cmx)
  (.dynlink.objs/native/dynlink.cmx as dynlink/dynlink.cmx)
  (dynlink.cma as dynlink/dynlink.cma)
  (dynlink.cmxa as dynlink/dynlink.cmxa)
  (dynlink.a as dynlink/dynlink.a)
  (dynlink.mli as dynlink/dynlink.mli)
  (.dynlink.objs/byte/dynlink.cmi as dynlink/dynlink.cmi)
  (META as dynlink/META))
 (section lib)
 (package ocaml))
