;**************************************************************************
;*                                                                        *
;*                                 OCaml                                  *
;*                                                                        *
;*                      Implementation of [%eval]                         *
;*                                                                        *
;*   All rights reserved.  This file is distributed under the terms of    *
;*   the GNU Lesser General Public License version 2.1, with the          *
;*   special exception on linking described in the file LICENSE.          *
;*                                                                        *
;**************************************************************************

(library
 (name eval)
 (modes byte native)
 (libraries dynlink_internal)
 (flags
  (:standard
   -strict-sequence
   -absname
   -bin-annot
   -safe-string
   -strict-formats))
 (ocamlopt_flags
  (:include %{project_root}/ocamlopt_flags.sexp))
 (library_flags
  (:standard -linkall)))

(install
 (files
  eval.cma
  eval.cmxa
  eval.a
  (.eval.objs/byte/eval.cmi as eval/eval.cmi))
 (section lib)
 (package ocaml))
